2018-01-11  Bruno Haible  <bruno@clisp.org>

	Enable most optimizations on Linux/sparc.
	* Makefile.devel (multibuild-linux-sparc): Enable all build variants
	that work.
	* makemake.in (XCFLAGS): For Linux/sparc, enable all optimizations
	except ASM.

2018-01-11  Bruno Haible  <bruno@clisp.org>

	Enable most optimizations on Linux/powerpc64le.
	* Makefile.devel (multibuild-linux-powerpc64le): Enable all build
	variants.
	* makemake.in (XCFLAGS): For Linux/powerpc64le, enable all optimizations
	except ASM.

2018-01-11  Bruno Haible  <bruno@clisp.org>

	Enable most optimizations on Linux/powerpc64.
	* Makefile.devel (multibuild-linux-powerpc64): Enable all build
	variants.
	* makemake.in (XCFLAGS): For Linux/powerpc64, enable all optimizations
	except ASM.

2018-01-11  Bruno Haible  <bruno@clisp.org>

	Enable most optimizations on Linux/powerpc.
	* Makefile.devel (multibuild-linux-powerpc): Enable all build variants
	that work.
	* makemake.in (XCFLAGS): For Linux/powerpc, enable all optimizations
	except ASM.

2018-01-11  Bruno Haible  <bruno@clisp.org>

	Enable most optimizations on Linux/arm64.
	* Makefile.devel (multibuild-linux-arm64): Enable all build variants.
	* makemake.in (XCFLAGS): For Linux/arm64, enable all optimizations
	except ASM.

2018-01-11  Bruno Haible  <bruno@clisp.org>

	Enable most optimizations on Linux/arm.
	* Makefile.devel (multibuild-linux-arm): Enable all build variants
	that work.
	* makemake.in (XCFLAGS): For Linux/arm, enable all optimizations
	except ASM.

2018-01-11  Bruno Haible  <bruno@clisp.org>

	Enable most optimizations on Linux/m68k.
	* Makefile.devel (multibuild-linux-m68k): Enable all build variants
	that are intended to work.
	* makemake.in (XCFLAGS): For Linux/m68k, enable all optimizations
	except ASM.

2018-01-10  Bruno Haible  <bruno@clisp.org>

	Enable more optimizations on Linux/hppa.
	* makemake.in (XCFLAGS): For Linux/hppa, enable all optimizations
	except ASM.